--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -12,11 +12,13 @@
 						<a class="nav-link active" href="/{{c.slug}}">{{c.nom}}</a>
 					</li>
 				{% endfor %}
-				{% if is_granted('ROLE_SUPER_ADMIN') %}
+				{% if app.user %}
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">GESTION</a>
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="{{path('Users_all')}}">Gestion des utilisateurs</a>
+						{% endif %}
+						{% if is_granted('ROLE_SUPER_ADMIN') %}
 							<a class="dropdown-item" href="{{path('category_show')}}">Gestion des catégories</a>
 							<a class="dropdown-item" href="{{path('product_all')}}">Gestion des produits</a>
 							<div class="dropdown-divider"></div>
@@ -49,6 +51,5 @@
 				{% endif %}
 			</li>
 		</ul>
-
 	</div>
 </div></nav>
