--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 			{% endblock %}
 		</title>
 		<link
-		rel="stylesheet" href="https://bootswatch.com/5/quartz/bootstrap.min.css" class="rel">
+		rel="stylesheet" href="https://bootswatch.com/5/solar/bootstrap.min.css" class="rel">
 		{# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> #}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
