--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,5 +1,5 @@
 body {
-    color: #333;
+    color: #fff;
     font-family: Verdana, Arial, Garamond, sans-serif;
     font-size: 16px;
     line-height: 1.42857143;
