--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-primary bg-primary">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="/"><img loading="eager" src="/images/logo.png" alt="logo du site" title="" style="width: 45px;height: 45px;">
 			PhoneShop</a>
