--- a/templates/commandes/index.html.twig
+++ b/templates/commandes/index.html.twig
@@ -7,7 +7,7 @@
 	<h1>Mes commandes</h1>
 	<div class="table-responsive">
 
-		<table class="table table-primary table-striped table-hover table-bordered border-warning">
+		<table class="table table-dark table-striped table-hover table-bordered border-danger">
 			<thead>
 				<tr>
 					<th>Numéro de commande</th>
