--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,11 +4,11 @@
 {% endblock %}
 {% block body %}
 	<h1 style="background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
-			background-clip:text;
-			-webkit-background-clip:text;
-			color:transparent;
-			text-shadow: -2px -2px 2px rgba(0,0,0,0.79);
-			font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
+																									background-clip:text;
+																									-webkit-background-clip:text;
+																									color:transparent;
+																									text-shadow: -2px -2px 2px rgba(0,0,0,0.79);
+																									font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
 
 	<div class="row">
 
@@ -27,7 +27,7 @@
 							({{p.prix}}
 							&euro;)</h4>
 						<h5>
-							<span class="badge bg-dark">
+							<span class="badge bg-light">
 								{{p.getCategory().getNom()}}
 							</span>
 						</h5>
