--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,11 +4,11 @@
 {% endblock %}
 {% block body %}
 	<h1 style="background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
-																									background-clip:text;
-																									-webkit-background-clip:text;
-																									color:transparent;
-																									text-shadow: -2px -2px 2px rgba(0,0,0,0.79);
-																									font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
+																								background-clip:text;
+																								-webkit-background-clip:text;
+																								color:transparent;
+																								text-shadow: -2px -2px 2px rgba(0,0,0,0.79);
+																								font-size: 3em;">NOS OFFRES SPÉCIALES !</h1>
 
 	<div class="row">
 
@@ -45,7 +45,7 @@
 
 	<hr>
 	<h1 style="color:#e15a97; text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3), 1px 1px 1px rgba(0,0,0,0.7);">
-		<span class="badge bg-secondary">Un service irréprochable</span>
+		<span class="badge bg-danger">Un service irréprochable ...</span>
 	</h1>
 	<p>
 		<strong>Les 3 bonnes raisons de choisir PhoneShop</strong>
