Dernier petit chgt en design

--- a/templates/shared/_assurance.html.twig
+++ b/templates/shared/_assurance.html.twig
@@ -5,7 +5,7 @@
 	<div class="card-body text-dark bg-primary text-justify">
 
 
-		<p class="card-text">{{ text }}</p>
+		<p class="card-text" style="color:black;">{{ text }}</p>
 	</div>
 
 </div>
